data/derived/comb/progs/unify/prog2286.ml.out
Characters 126-139:
  | Sine(e1) -> let ans = sin(pi *. eval(e1,x,y)) in Printf.fprintf "sine is %f " ans
                                                                    ^^^^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         out_channel
